--- a/app/src/app.html
+++ b/app/src/app.html
@@ -14,6 +14,11 @@
 		
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+		<div class="background">
+			<div class="container-inner">
+				<div style="display: contents">%sveltekit.body%</div>
+
+			</div>
+		</div>
 	</body>
 </html>
